@@ -1,4 +1,4 @@
-ARG rakudo_version=2020.10
+ARG rakudo_version=2021.04
 FROM rakudo-star:$rakudo_version
 ARG rakudo_version
 
@@ -12,7 +12,8 @@ RUN chmod 700 /home/raku \
 
 # Partially adapted from cro-http-websocket Dockerfile, maintained by
 # Jonathan Worthington <jonathan@edument.se>
-ARG cro_version=0.8.4
+ARG cro_version=0.8.5
+ARG cro_cbor_version=0.0.2
 
 RUN apt-get update \
  && apt-get -y --no-install-recommends install build-essential libsodium-dev libssl-dev \
@@ -28,6 +29,7 @@ RUN apt-get update \
  && zef install 'Cro::TLS:ver<'$cro_version'>' \
  && zef install 'Cro::HTTP:ver<'$cro_version'>' \
  && zef install 'Cro::WebSocket:ver<'$cro_version'>' \
+ && zef install 'Cro::CBOR:ver<'$cro_cbor_version'>' \
  && apt-get purge -y --auto-remove build-essential \
  && rm -rf /var/lib/apt/lists/*
 
